# pastery

./: .gitignore  Cargo.toml  README.md  RULES.md  TODO.md  clip.data  copilot-instructions.md  memo.txt  run.sh  settings.json
.github/: copilot-instructions.md
pastery/: API_EXAMPLES.md  Cargo.toml  TODO.md  database.md  pastery.json
pastery-pop/: AGENTS.md  Agent.md  Cargo.toml  GEMINI.md  README.md  package-lock.json  package.json  settings.json  vite.config.js
pastery-pop/src/: localization.rs  main.rs  settings.rs
pastery-pop/src-tauri/: Cargo.toml  pastery.json  tauri.conf.json
pastery-pop/src-tauri/src/: lib.rs  main.rs
pastery-pop/src-tauri/src/pastery/: API.md  Features.md  README.md  settings.json
pastery-pop/src-tauri/src/pastery/src/: settings.rs
pastery-pop/src/components/: ContextMenu.svelte  EditMemoDialog.svelte
pastery-pop/src/routes/: +page.css  +page.svelte
pastery-pop/src/utils/: contextMenuStore.js
pastery/src/: database.rs  lib.rs  main.rs  server.rs  settings.rs
pastery/src/database/: mod.rs  tests.rs
src/: clipboard_data.rs  database.rs  key_combination.rs  main.rs  server.rs
