[package]
name = "pastery"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.0"
rdev = "0.5.3"
chrono = "0.4"
redb = "3.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
log = "0.4"
env_logger = "0.10"